<resources>
    <string name="app_name">BCUD Data Generator</string>
    <string name="tf_material_navigation_item">True Form Materials</string>
    <string name="select_an_item_main">Select an item from the list below.</string>
    <string name="unit_id">Unit ID</string>
    <string name="unit_id_num">Unit ID: %d</string>
    <string name="materials">Materials</string>
    <string name="material">Material</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_num">Quantity: %d</string>
    <string name="add_material">Add material</string>
    <string name="delete">Delete</string>
    <string name="delete_item_confirmation">Do you want to delete %s?</string>
    <string name="delete_unit_confirmation">Do you want to delete unit with ID %d?</string>
    <string name="edit_material">Edit material</string>
    <string name="unit_id_empty_error">Unit ID mustn\'t be empty</string>
    <string name="quantity_empty_error">Quantity mustn\'t be empty</string>
    <string name="impor">Import</string>
    <string name="export">Export</string>
    <string name="import_failed">Import failed</string>
    <string name="replace">Replace</string>
    <string name="keep">Keep</string>
    <string name="conflict_resolution_for_unit_id">Conflict resolution for unit ID: %d</string>
    <string name="export_failed">Export failed</string>
    <string name="export_successful">Export successful</string>
    <string name="quantity_zero_error">Quantity mustn\'t be 0</string>
    <string name="nothing_to_export">Nothing to export</string>
    <string name="priority_str">Priority: %s</string>
    <string name="priority">Priority</string>
    <string name="talent">Talent</string>
    <string name="priority_empty_error">Priority mustn\'t be empty</string>
    <string name="talents">Talents</string>
    <string name="edit_talent">Edit talent</string>
    <string name="add_talent">Add talent</string>
    <string name="max_materials_error">This unit already has the maximum number of materials</string>
    <string name="max_talents_error">This unit already has the maximum number of talents</string>
    <string name="priority_text">Priority text</string>
    <string name="unit_type">Unit type</string>
    <string name="unit_id_already_exists_error">This unit ID already exists</string>
    <string name="no_materials_error">You haven\'t added any materials</string>
    <string name="material_already_exists_error">This material already exists</string>
    <string name="talent_already_exists_error">This talent already exists</string>
    <string name="confirm_exit">Confirm exit</string>
    <string name="items_present_exit_notice">There are %s in this screen.\nMake sure you\'ve saved them to file through the menu item on top before exiting.\nDo you want to exit now?</string>
    <string name="talents_lowercase">talents</string>
    <string name="materials_lowercase">materials</string>
    <string name="hypermax_lowercase">hypermax data</string>
    <string name="exit">Exit</string>
    <string name="add_hypermax_data">Add Hypermax Data</string>
    <string name="edit_hypermax_data">Edit Hypermax Data</string>
    <string name="hypermax_priority">Hypermax Priority</string>
    <string name="first_form_name">First form name</string>
    <string name="second_form_name">Second form name</string>
    <string name="has_true_form">Has True Form</string>
    <string name="true_form_name">True form name</string>
    <string name="has_useful_to_own_text">Has \"useful to own by\" text</string>
    <string name="useful_to_own_text">\"Useful to own by\" text</string>
    <string name="has_useful_to_tf_or_talent_text">Has \"useful to true form/talent by\" text</string>
    <string name="useful_to_tf_text">\"Useful to true form by\" text</string>
    <string name="useful_to_talent_text">\"Useful to talent by\" text</string>
    <string name="true_form">True Form</string>
    <string name="first_form_name_empty_error">First form name can\'t be empty</string>
    <string name="second_from_name_empty_error">Second from name can\'t be empty</string>
    <string name="true_form_name_empty_error">True form name can\'t be empty</string>
    <string name="useful_to_own_text_empty_error">Useful to own text can\'t be empty</string>
    <string name="useful_to_true_form_or_talent_text_empty_error">Useful to true form/talent text can\'t be empty</string>
    <string name="has_hypermax_priority_text">Has \"hypermax priority\" text</string>
    <string name="hypermax_priority_text_empty_error">Hypermax priority text can\'t be empty</string>
    <string name="unit_base_data">Unit Base Data</string>
    <string name="hypermax_priority_text">\"Hypermax priority\" text</string>
    <string name="elder_epic_priority_text">Elder/Epic priority text</string>
    <string name="elder_epic_priority_text_empty_error">Elder/Epic priority text mustn\'t be empty</string>
    <string name="elder_epic_tf_priority">Elder/Epic TF Priority</string>
</resources>